# quecto-py

./: .gitignore  README.md  pyproject.toml  test_all.py
src/quecto/: __init__.py  quecto.py
tests/: ivi_invalid.py  ivi_valid.py  short.py  short_with_password.py  unshort.py  unshort_with_password.py
