[project]
name="quecto"
description="The official python wrapper for Quecto, a link shortener"
readme="README.md"
version="1.0.1"
license= { file = "LICENSE" }
requires-python=">=3.7"
keywords=["API", "wrapper", "quecto", "link", "shortener", "shorten", "short"]
authors = [
    { name= "oriionn" }
]
classifiers=  [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3"
]
dependencies = [
    "requests",
    "requests-toolbelt"
]

[project.urls]
homepage="https://github.com/oriionn/quecto-py"
documentation="https://github.com/oriionn/quecto-py#readme"
repository="https://github.com/oriionn/quecto-py"